# curly-octo-fishstick

./: .env.example  .gitignore  AGENTS.md  README.md  compose.yml  get_token.sh
backend/: .env.example  Cargo.toml  Dockerfile  README.md  entrypoint.sh
backend/src/: auth.rs  error.rs  handlers.rs  main.rs  models.rs
frontend/: .env.example  Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/src/: app.d.ts  app.html  auth.ts  hooks.server.ts
frontend/src/lib/: types.ts
frontend/src/lib/components/: ContactForm.svelte  ContactsTable.svelte
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
frontend/src/routes/contacts/: +layout.server.ts  +page.server.ts  +page.svelte
frontend/src/routes/contacts/[id]/edit/: +page.svelte  +page.ts
frontend/src/routes/contacts/new/: +page.svelte
frontend/src/routes/signin/: +page.server.ts  +page.svelte
frontend/src/routes/signout/: +page.server.ts  +server.ts
keycloak-realm-config/: contacts-realm.json
migrations/2025-09-18-203458-0000_create_contacts_table/: up.sql
src/: handlers.rs  main.rs  schema.rs
ui-design/: contacts-table.html  sidebar-layout.html
