[package]
name = "contacts-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9"
base64 = "0.22" # For decoding JWK components
thiserror = "1.0" # For cleaner error handling
dotenvy = "0.15" # For loading .env files
env_logger = "0.11"
log = "0.4"
futures-util = "0.3"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
diesel_migrations = "2"
